--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -139,8 +139,10 @@ const univerAPI = FUniver.newAPI(univer);
 删除工作表需要知道工作表的 Id。
 
 ```typescript
+import { RemoveSheetCommand } from '@univerjs/sheets'
+
 const sheetId = 'SheetId';
-univerAPI.executeCommand('sheet.command.remove-sheet', { subUnitId: sheetId });
+univerAPI.executeCommand(RemoveSheetCommand.id, { subUnitId: sheetId });
 ```
 
 ### 激活工作表
@@ -148,9 +150,11 @@ univerAPI.executeCommand('sheet.command.remove-sheet', { subUnitId: sheetId });
 激活工作表需要知道工作薄的 Id 和工作表的 Id。
 
 ```typescript
+import { SetWorksheetActiveOperation } from '@univerjs/sheets'
+
 const workbookId = 'WorkbookId';
 const sheetId = 'SheetId';
-univerAPI.executeCommand('sheet.command.active-sheet', { unitId: workbookId, subUnitId: sheetId });
+univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, subUnitId: sheetId });
 ```
 
 ## 行 Row
@@ -785,8 +789,10 @@ const range = selection.getActiveRange();
 设置 A1:B2 为选区
 
 ```typescript
+import { SetSelectionsOperation } from '@univerjs/sheets'
+
 const sheetId = 'SheetId';
-univerAPI.executeCommand('sheet.operation.set-selections', {
+univerAPI.executeCommand(SetSelectionsOperation.id, {
   selections: [{
     range: {
       startRow: 0,
@@ -812,6 +818,7 @@ activeWorkbook.onSelectionChange((selection) => {
 ```
 
 ### 添加一个Popup到cell <VersionBadge version="0.2.10+" />
+
 ```tsx
 const sheet = univerAPI.getActiveWorkbook().getActiveSheet();
 const range = sheet.getRange(0, 0, 10, 10); // A1:J10
@@ -829,8 +836,10 @@ const disposeable = range.attachPopup({
 disposeable.dispose();
 ```
 
-### 添加一个FloatDom到sheet <VersionBadge version="0.2.10+" />
+### 添加一个 FloatDom 到 sheet <VersionBadge version="0.2.10+" />
+
 [demo](https://stackblitz.com/edit/awesome-univer-sheets-vite-demo-fqsu99?file=package.json,src%2Fmain.tsx)
+
 1. 依赖 `@univerjs/sheets-drawing-ui` 插件 
 2. 需要在 univer 渲染完成之后调用
 3. `componentKey` 必须传已注册的组件id 或者react/vue3组件 如果是 vue3组件必须标明isVue3
