--- a/src/docs/guides/general/server/import-and-export.en-US.mdx
+++ b/src/docs/guides/general/server/import-and-export.en-US.mdx
@@ -7,14 +7,14 @@ import exportImg from './import-and-export/export.png'
 ## Import flowchart
 
 1. Upload file to object storage, get `fileID` in response.
-2. Call import api with `fileID` parameter, get `taskID` in response.
+2. Call import api with `fileID` parameter and `outputType`(1 output unit file; 2 output to json data), then get `taskID` in response.
 3. Polling to get async exchange task result, get `status` in response:
 
     - `pending`: need to continue polling againt.
-    - `done`: exchange success, can get `import.jsonID` in reponse.
+    - `done`: exchange success, can get `import.jsonID` or `import.unitID` in reponse.
     - `failed`: exchange failed, can get `error.message` for infomation.
 
-4. Use `import.jsonID` to get exchange result by call get file api.
+4. If you want to get json data instead unit file, use `import.jsonID` to get exchange result by call get file api.
 
 <Image src={importImg} alt="import" width={350} />
 
