--- a/src/docs/guides/general/server/import-and-export.zh-CN.mdx
+++ b/src/docs/guides/general/server/import-and-export.zh-CN.mdx
@@ -7,12 +7,12 @@ import exportImg from './import-and-export/export.png'
 ## 导入流程
 
 1. 上传文件到对象存储，获取 `fileID` 返回值。
-2. 用 `fileID` 参数调用导入接口，获取 `taskID` 返回值。
+2. 用 `fileID` 参数调用导入接口，同时设置导出类型 `outputType`（1 导入为 unit 文档，2 导入以得到 json 数据），获取 `taskID` 返回值。
 3. 轮询获取转换结果，根据 `status` 返回值处理：
     - `pending`：需要接着轮询。
-    - `done`：转换成功，得到 `import.jsonID` 返回值。
+    - `done`：转换成功，得到 `import.jsonID` 或 `import.unitID` 返回值。
     - `failed`：转换失败，根据 `error.message` 获取错误信息。
-4. 使用 `import.jsonID` 调获取文件接口下载转换结果。
+4. 如果你想得到 json 数据而不是 unit 文档，请使用 `import.jsonID` 调获取文件接口下载转换结果。
 
 <Image src={importImg} alt="import" width={350} />
 
