docs: update permission docs

--- a/src/docs/guides/sheet/features/core/permission.en-US.mdx
+++ b/src/docs/guides/sheet/features/core/permission.en-US.mdx
@@ -39,6 +39,7 @@ The permissions for worksheets and selections are set in command mode.
 const accessor = univer.__getInjector();
 const commandService = accessor.get(ICommandService);
 // import { getSheetCommandTarget } from '@univerjs/sheets';
+const target = getSheetCommandTarget(univerInstanceService);
 if (!target) {
   return;
 }
