--- a/src/docs/guides/sheet/features/thread-comment/introduction.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment/introduction.en-US.mdx
@@ -55,7 +55,8 @@ const univer = new Univer({
 ## Register
 
 ```typescript
-import { UniverSheetsThreadCommentPlugin } from '@univerjs/sheets-thread-comment';
-
+univer.registerPlugin(UniverThreadCommentPlugin);
+univer.registerPlugin(UniverThreadCommentUIPlugin);
+univer.registerPlugin(UniverSheetsThreadCommentBasePlugin);
 univer.registerPlugin(UniverSheetsThreadCommentPlugin);
 ```
