--- a/src/docs/guides/sheet/features/data-validation/introduction.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/data-validation/introduction.zh-CN.mdx
@@ -35,6 +35,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 ```typescript
 import '@univerjs/sheets-data-validation/lib/index.css';
 
+import { UniverDataValidationPlugin } from '@univerjs/data-validation';
 import { UniverSheetsDataValidationPlugin } from '@univerjs/sheets-data-validation';
 ```
 
@@ -59,5 +60,6 @@ const univer = new Univer({
 ## 注册
 
 ```typescript
+univer.registerPlugin(UniverDataValidationPlugin);
 univer.registerPlugin(UniverSheetsDataValidationPlugin);
 ```
