--- a/src/docs/guides/sheet/features/thread-comment/introduction.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment/introduction.en-US.mdx
@@ -1,7 +1,7 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# Comment / Annotation
+# Comment / Annotation Introduction
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.SHEET} />
 
