--- a/src/docs/guides/sheet/features/thread-comment/introduction.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/thread-comment/introduction.zh-CN.mdx
@@ -1,7 +1,7 @@
 import { Tabs } from 'nextra/components'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# 评论 / 批注
+# 评论 / 批注简介
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.SHEET} />
 
