--- a/src/docs/guides/sheet/features/thread-comment/facade.en-US.mdx
+++ b/src/docs/guides/sheet/features/thread-comment/facade.en-US.mdx
@@ -1,6 +1,6 @@
 import VersionBadge from '@/components/VersionBadge'
 
-## Facade API <VersionBadge version="0.2.10+" />
+## Comment / Annotation Facade API <VersionBadge version="0.2.10+" />
 
 To get full defination of facade api, please refer to [FacadeAPI](/typedoc/@univerjs/facade/README)
 
